# rollrs

./: Cargo.toml  LICENSE  readme.md
src/: components.rs  drawterm.rs  first_names.rs  flair.rs  last_names.rs  layout.rs  main.rs  name.rs  probability.rs  roll.rs
