[package]
name = "roll"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version="4.0.29", features = ["cargo", "wrap_help", "suggestions", "color"] }
crossterm = "0.23.2"
itertools = "0.10.5"
libm = "0.2.6"
rand = "0.8.5"
textwrap = "0.16.0"
